--- a/ingress.yaml
+++ b/ingress.yaml
@@ -10,12 +10,12 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`www.gotify.mmchomelab.com`) # change to your domain
+    - match: Host(`www.gotify2.mmchomelab.com`) # change to your domain
       kind: Rule
       services:
-        - name: gotify
+        - name: gotify2
           port: 80
-    - match: Host(`gotify.mmchomelab.com`) # change to your domain
+    - match: Host(`gotify2.mmchomelab.com`) # change to your domain
       kind: Rule
       services:
         - name: gotify
